bugfix horizontal scroll 2

--- a/lab2/thefuture/style.css
+++ b/lab2/thefuture/style.css
@@ -39,13 +39,13 @@ body {
     background-color: var(--yellow);
 }
 
-@media(min-width: 460px) {
+@media(min-width: 560px) {
     .container {
         grid-template-columns: 50% 50%;
     }
 }
 
-@media(min-width: 900px) {
+@media(min-width: 1200px) {
     .container {
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, 1fr);
